@@ -46,17 +46,17 @@ CREATE TABLE atomic.events (
 	domain_sessionidx smallint,
 	network_userid varchar(38),
 	-- Location
-	geo_country char(2),
-	geo_region char(2),
-	geo_city varchar(75),
-	geo_zipcode varchar(15),
-	geo_latitude double precision,
-	geo_longitude double precision,
-	geo_region_name varchar(100),                      -- Added in 0.3.0
+	geo_country char(2) encode runlength,
+	geo_region char(2) encode runlength,
+	geo_city varchar(75) encode runlength,
+	geo_zipcode varchar(15) encode runlength,
+	geo_latitude double precision encode runlength,
+	geo_longitude double precision encode runlength,
+	geo_region_name varchar(100) encode runlength,     -- Added in 0.3.0
 	-- IP lookups
-	ip_isp varchar(100)                                -- Added in 0.3.0
-	ip_organization varchar(100)                       -- Added in 0.3.0
-	ip_domain varchar(100)                             -- Added in 0.3.0	
+	ip_isp varchar(100) encode runlength,              -- Added in 0.3.0
+	ip_organization varchar(100) encode runlength,     -- Added in 0.3.0
+	ip_domain varchar(100) encode runlength,           -- Added in 0.3.0	
 	-- Page
 	page_url varchar(4096),
 	page_title varchar(2000),
